--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -10,3 +10,4 @@ $colorNewArrivals: #f8f3f4;
 $colorOrderedTable: #656565;
 $backgroundLight: #f7f7f7;
 $backgroundDark: #222224;
+$colorProduct: #6f6e6e;
