--- a/styles/scss/product.scss
+++ b/styles/scss/product.scss
@@ -41,3 +41,450 @@
   }
 }
 
+.products{
+  display: flex;
+  margin-bottom: 110px;
+
+  &__leftMenu{
+    width: 248px;
+    margin-right: 50px;
+
+    &__item{
+      min-height: 37px;
+      border-left: 5px solid $colorSelection;
+      border-bottom: 1px solid #ebebeb;
+      display: flex;
+      align-items: center;
+      margin-bottom: 18px;
+
+      &:last-child{
+        margin-bottom: 0;
+      }
+
+      &__a{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 16px;
+        padding-right: 6px;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: $colorProduct;
+
+        &:hover{
+          color: $mainColorHover;
+        }
+
+        &__active{
+          color: $colorSelection;
+        }
+      }
+    }
+
+    &__ul{
+      padding-left: 22px;
+      margin-bottom: 41px;
+
+      &__li{
+        color: $colorProduct;
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 27px;
+
+        &:last-child{
+          margin-bottom: 0;
+        }
+
+        a:hover{
+          color: $mainColorHover;
+        }
+      }
+    }
+  }
+
+  &__right{
+    width: 74%;
+  }
+
+  &__upForms{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 41px;
+
+    div, form{
+      padding-right: 58px;
+
+      &:last-child{
+        padding-right: 0;
+      }
+    }
+
+    &__trending{
+
+      width: 33%;
+      box-sizing: border-box;
+
+      h3{
+        margin-bottom: 25px;
+        color: $colorProduct;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+
+      &__ul{
+        display: flex;
+        flex-wrap: wrap;
+
+        &__li{
+          font-size: 14px;
+          font-weight: 400;
+          color: $colorProduct;
+          border-right: 1px solid #dfdfdf;
+          padding-right: 12px;
+          padding-left: 12px;
+
+          &:last-child{
+            border: none;
+            padding-right: 0;
+          }
+
+          &:first-child{
+            padding-left: 0;
+          }
+
+          &:nth-child(4n){
+            padding-left: 0;
+          }
+
+          &:nth-child(-n+3){
+            margin-bottom: 16px;
+          }
+
+          a:hover{
+            color: $mainColorHover;
+          }
+        }
+      }
+    }
+
+    &__size{
+
+      width: 33%;
+
+      h3{
+        margin-bottom: 25px;
+        color: $colorProduct;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+
+      div{
+        display: flex;
+        flex-wrap: wrap;
+
+        p{
+          font-size: 14px;
+          font-weight: 400;
+          text-transform: uppercase;
+          margin-right: 23px;
+
+          &:last-child{
+            margin-right: 0;
+          }
+
+          &:nth-child(-n+4){
+            margin-bottom: 13px;
+          }
+        }
+
+        input[type="checkbox"]{
+          margin-right: 9px;
+        }
+      }
+    }
+
+    &__price{
+
+      width: 33%;
+
+      h3{
+        margin-bottom: 25px;
+        color: $colorProduct;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+
+      input[type="range"]{
+        width: 100%;
+        margin-bottom: 21px;
+
+        &::-webkit-slider-thumb{
+          color: $colorSelection;
+        }
+      }
+
+      &__rangeSign{
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  &__sort{
+    width: 100%;
+    min-height: 50px;
+    background-color: #f3f3f3;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    margin-bottom: 48px;
+
+    p{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 10px;
+      color: $colorProduct;
+      font-size: 14px;
+      font-weight: 400;
+      border: 1px solid #f3f3f3;
+      border-collapse: collapse;
+      background-color: #ffffff;
+    }
+
+    select{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 10px;
+      color: $colorProduct;
+      font-size: 14px;
+      font-weight: 400;
+      border: 1px solid #f3f3f3;
+      border-collapse: collapse;
+      outline: none;
+      margin-right: 10px;
+
+      &:last-child{
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__items{
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item{
+      margin-right: 25px;
+      margin-bottom: 60px;
+      position: relative;
+
+      &:nth-child(3n){
+        margin-right: 0;
+      }
+
+      &__img{
+        margin-bottom: 19px;
+      }
+
+      &__link{
+
+        &__title{
+          color: $colorProduct;
+          font-size: 13px;
+          font-weight: 700;
+          text-transform: uppercase;
+          padding-left: 14px;
+          margin-bottom: 17px;
+        }
+
+        &__price{
+          color: $colorSelection;
+          font-size: 16px;
+          font-weight: 700;
+          text-transform: uppercase;
+          padding-left: 14px;
+        }
+      }
+
+      &__hover{
+        display: none;
+
+        &__add{
+          width: 123px;
+          height: 39px;
+          border-radius: 3px;
+          border: 1px solid #ffffff;
+          color: #ffffff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-bottom: 8px;
+          opacity: 1;
+
+          img{
+            margin-right: 8px;
+          }
+        }
+
+        &__round{
+          width: 57px;
+          height: 38px;
+          border-radius: 3px;
+          border: 1px solid #ffffff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-right: 5px;
+          opacity: 1;
+        }
+
+        &__like{
+          width: 57px;
+          height: 38px;
+          border-radius: 3px;
+          border: 1px solid #ffffff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          opacity: 1;
+        }
+      }
+
+      &:hover{
+
+        > .products__items__item__hover{
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          padding: 98px 70px 144px 70px;
+          box-sizing: border-box;
+          background: $bgColorHover;
+          width: 263px;
+          height: 280px;
+          position: absolute;
+          left:0;
+          top:0;
+          opacity: 0.75;
+        }
+      }
+    }
+  }
+
+  &__pagination{
+    display: flex;
+    justify-content: space-between;
+
+    &__links{
+      border-radius: 3px;
+      border: 1px solid #ebebeb;
+      padding: 16px 39px;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &__arrowLeft{
+        color: #aaaaaa;
+        margin-right: 16px;
+      }
+
+      &__number{
+        color: #c4c4c4;
+        font-size: 16px;
+        font-weight: bold;
+        margin-right: 20px;
+
+        &:nth-child(7){
+          margin-right: 0;
+        }
+
+        &:nth-last-child(2){
+          margin-right: 0;
+        }
+
+        &__active{
+          color: $colorSelection;
+        }
+      }
+
+      &__arrowRight{
+        color: $colorSelection;
+        margin-left: 16px;
+      }
+
+      span{
+        color: #c4c4c4;
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      a:hover{
+        color: $mainColorHover;
+      }
+    }
+
+    &__all{
+      width: 150px;
+      height: 44px;
+      border-radius: 3px;
+      border: 1px solid $colorSelection;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 16px;
+      font-weight: bold;
+      color: $colorSelection;
+
+      &:hover{
+        background-color: #eaeaea;
+      }
+    }
+  }
+}
+
+.options{
+  background-color: #222224;
+  min-height: 341px;
+
+  &__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 341px;
+
+    &__block{
+      color: #fbfbfb;
+      max-width: 320px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img{
+        margin-bottom: 30px;
+      }
+
+      &__text{
+        text-align: center;
+
+        h3{
+          font-size: 20px;
+          font-weight: 700;
+          margin-bottom: 17px;
+        }
+
+        &__p{
+          font-size: 14px;
+          font-weight: 300;
+          letter-spacing: 0.35px;
+        }
+      }
+    }
+  }
+}
